--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run deploy",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
@@ -32,6 +31,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.2.0",
     "vite": "^5.0.8"
   }
 }
