--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
     "axios": "^1.6.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
